--- a/vanilla/src/index.html
+++ b/vanilla/src/index.html
@@ -7,7 +7,18 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="save-indicator-done" id="save-indicator"></div>
+    <main>
+      <div id="app"></div>
+      <script type="module" src="/main.js"></script>
+    </main>
   </body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="/__/firebase/8.9.1/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <!-- Initialize Firebase -->
+  <script src="/__/firebase/init.js"></script>
 </html>
