--- a/vanilla/src/index.html
+++ b/vanilla/src/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="save-indicator-done" id="save-indicator"></div>
+    <header class="clearfix">
+      <a href="." class="site-title">Todo List</a>
+      <div class="sync-indicator-done" id="sync-indicator"></div>
+      <button type="button" class="btn-add" id="btn-add">&#43;</button>
+    </header>
     <main>
       <div id="app"></div>
       <script type="module" src="/main.js"></script>
