Squashed commit of the following:
commit 6256921f5943b4feba8842101b3325e38c9c42dc
Author: newb1er <taiwanmichael429@gmail.com>
Date:   Sat Nov 26 20:58:27 2022 +0800

    feat: list input div

commit 82b867f3be1c725124db0d311a0acfd5e73d318a
Author: newb1er <taiwanmichael429@gmail.com>
Date:   Sat Nov 26 18:10:43 2022 +0800

    style: list selected

commit afa37ef08e15d88e86345b1261084c57551e9252
Author: newb1er <taiwanmichael429@gmail.com>
Date:   Sat Nov 26 18:04:54 2022 +0800

    style: box-sizing

commit 6a10149a8bde4d372b4b84c979ab15513222d7ab
Author: newb1er <taiwanmichael429@gmail.com>
Date:   Sat Nov 26 18:00:44 2022 +0800

    feat: list

--- a/vanilla/src/index.html
+++ b/vanilla/src/index.html
@@ -19,10 +19,18 @@
     </header>
     <main>
       <div class="sidebar">
-        <div class="list">
-          <button type="button" class="btn-add" id="btn-list-add">&#43;</button>
+        <nav class="task-list">
+          <ul></ul>
+        </nav>
+        <div class="list-new">
+          <form id="new-list-form">
+            <input type="form" id="new-list-input" />
+            <button type="submit" id="new-list-ok">OK</button>
+          </form>
+          <button type="button" class="btn-new-list" id="btn-list">
+            New Category
+          </button>
         </div>
-        <button type="button" class="btn-new-cate">New Category</button>
       </div>
       <div id="app"></div>
       <script type="module" src="/main.js"></script>
