feat(public): Add welcome text & Re-layout

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,20 @@
     <title>Todo</title>
   </head>
   <body>
+    <h1>Welcome.</h1>
+    <h2>
+      I created a todo app in different framework. Trying to make each of them identical.
+      <br/>
+      Feel free to check them out.
+    </h2>
+    <h2>Frameworks</h2>
     <nav>
       <ul>
-        <a href="https://newb1er-todo-vanilla.web.app">Vanilla</a>
-        <a href="http://newb1er-todo-vue.web.app">Vue</a>
+        <li><a href="https://vanilla-todo.newbier.xyz">Vanilla</a></li>
+        <li><a href="http://vue-todo.newbier.xyz">Vue</a></li>
       </ul>
     </nav>
+    <a href="https://github.com/newb1er/to-do">GitHub</a>
   </body>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="/__/firebase/8.9.1/firebase-app.js"></script>
